--- a/src/main/resources/templates/register/registerUser.html
+++ b/src/main/resources/templates/register/registerUser.html
@@ -16,8 +16,7 @@
 
 				<input class="data-input" name="name" placeholder="Name"> <input
 					class="data-input" name="email" placeholder="Email"> <input
-					class="data-input" name="password" placeholder="Placeholder">
-
+					class="data-input" name="password" placeholder="Password">
 				<button class="data-button" type="submit">Save</button> <a
 					href="all">List All</a>
 			</form>
